# event-driven-app-platform

./: !.nu  %.nu  ,.nu  .gitignore  :.nu  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile-build  README.md  TODO.md  __.nu  __.toml  chat.toml  config.toml  drill.yaml  gateway.toml  index.html
.github/workflows/: chat.yaml  chef.yaml  gateway.yaml  main.yaml
agent/: Cargo.toml
assets/: debug.css  main.css
brick/: Cargo.toml
brick/examples/: brickschema.rs
brick/src/: classify.rs  lib.rs  merge.rs  render.rs
brick_macro/: Cargo.toml
brick_macro/src/: classify.rs  lib.rs  props.rs  utils.rs
chat/: Cargo.toml
chat/migrations/: V1__init.sql  V2__seed.sql
chat/proc_tests/: Cargo.toml
chat/src/: main.rs  migrate.rs
chat/src/libs/: admin.rs  config.rs  db.rs  error.rs  handler.rs  logic.rs  mod.rs  postgres.rs  session.rs  shared.rs
chat/src/libs/_scripts/: mod.rs
chat/src/libs/logic/: chat.rs  crm.rs  echo.rs  mod.rs
chat/src/libs/wasm/: empty.rs  extism.rs  wasm3.rs  wasmer.rs  wasmtime.rs
component/: Cargo.toml
component/examples/: componentschema.rs  jsonschema.rs  layout.json  scratch.rs
component/src/: classify.rs  lib.rs  merge.rs  render.rs
component_macro/: Cargo.toml
component_macro/src/: classify.rs  lib.rs  props.rs
content/: Cargo.toml
content/src/: lib.rs
crates/agent/: Cargo.toml
crates/brick/examples/: layout.json  scratch.rs
crates/brick/src/: classify.rs  lib.rs  render.rs
crates/brick_macro/src/: props.rs  utils.rs
crates/chat/: Cargo.toml
crates/chat/migrations/: V1__init.sql
crates/chat/src/: main.rs
crates/chat/src/libs/: config.rs  db.rs  handler.rs  mod.rs  postgres.rs  shared.rs
crates/chat/src/libs/_scripts/: rune.rs
crates/chat/src/libs/_wasm/: mod.rs
crates/chat/src/libs/logic/: mod.rs
crates/content/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/libs/: admin.rs  error.rs  mod.rs  websocket.rs
crates/kafka/src/: lib.rs
crates/message/: Cargo.toml
crates/message/src/: lib.rs
crates/ui/: Cargo.toml  README.md  index.html
crates/ui/src/libs/: hooks.rs
crates/ui/src/libs/components/: dynamic.rs  fold.rs  form.rs  frame.rs  mod.rs
crates/ui/src/libs/components/widgets/: button.rs  image.rs  input.rs  table.rs
crates/ui_macro/: Cargo.toml
crates/ui_macro/src/: lib.rs  walk.rs
data/: .gitignore
data/example/: enum.rs  hashmap.rs  json_path.rs  serde.rs  slice.rs  value.rs
data/message/: 00.chat.layout.yaml  00.chat_layout.yaml  00.default_layout.yaml  00.layout.yaml  00.no.layout.yaml  00.no_layout.yaml  00.text.layout.yaml  01.card.layout.yaml  01.msg.tmp1.yaml  01.msg.tmpl.yaml  01.no.layout.yaml  01.segment.render.yaml  01.segment.tmpl.yaml  01.test.tmp1.yaml  02.chat.fill.yaml  02.concat.yaml  02.data.yaml  02.replace.yaml  03.ask.yaml  03.list.yaml  04.title.yaml  05.form.yaml  05.from_in_case.yaml  06.table.yaml  07.segment.tmpl.json  07.segment.tmpl.yaml  07.svg.yaml  08.apexchart.yaml  08.chart.yaml  08.diagram.yaml  08.segment.fill.yaml  09.fold.yaml  10.channel.yaml  11.list.yaml  12.empty.yaml  12.placeholder.yaml
data/sandbox/: ast.rs  axum_state.rs  cbor.rs  derive.rs  furures.rs  json_path.rs  let-chains.rs  macro.rs  mut_borrow.rs  rand.rs  time.rs
docker/: Dockerfile  build.gateway.Dockerfile  build.ui.Dockerfile  chat.Dockerfile  chef.Dockerfile  gateway.Dockerfile  ui.Dockerfile
faucet/: Cargo.toml  Dioxus.toml  Dockerfile  __.nu
faucet/data/example/: serde.rs
faucet/data/message/: 01.segment.tmpl.yaml  08.chart.yaml
faucet/src/libs/: ws.rs
faucet/src/libs/components/: chart.rs  diagram.rs  form.rs
faucet/src/libs/components/widgets/: image.rs  input.rs  text.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
gateway/src/libs/: admin.rs  auth.rs  config.rs  kafka.rs  message.rs  mod.rs  settings.rs  shared.rs  template.rs  webhooks.rs  websocket.rs
kafka/: Cargo.toml
kafka/src/: config.rs  lib.rs
layout/: Cargo.toml
layout/examples/: jsonschema.rs
layout/src/: classify.rs  jsonschema.rs  lib.rs
manifest/: chat_layout.yaml  layout.json  segment.tmpl.json  user.json  webhook_error.json
message/: Cargo.toml
message/src/: lib.rs  queue.rs  session.rs
proc/: Cargo.toml
proc/src/: lib.rs  main.rs
proc_tests/: Cargo.toml
proc_tests/src/: main.rs
src/: index.html  main.rs
src/libs/: data.rs  mod.rs  store.rs  ws.rs
src/libs/components/: chart.rs  container.rs  diagram.rs  dynamic.rs  fold.rs  form.rs  frame.rs  input.rs  list.rs  mod.rs  rack.rs  svg.rs  text.rs  types.rs  utils.rs  widgets.rs  x.rs
src/libs/components/widgets/: button.rs  container.rs  image.rs  input.rs  mod.rs  table.rs  text.rs
ui/: Cargo.toml  Dioxus.toml  TODO.md  __.nu
ui/assets/: custom.css  main.css
ui/data/message/: 05.form.yaml  07.svg.yaml
ui/src/: jsonschema.rs  main.rs
ui/src/libs/: data.rs  hooks.rs  mod.rs  store.rs  ws.rs
ui/src/libs/components/: accordion.rs  chart.rs  container.rs  diagram.rs  dynamic.rs  float.rs  fold.rs  form.rs  frame.rs  mod.rs  popup.rs  rack.rs  render.rs  svg.rs  types.rs  utils.rs
ui/src/libs/components/widgets/: button.rs  image.rs  input.rs  input2.rs  menu.rs  mod.rs  popup.rs  select.rs  table.rs  text.rs  textarea.rs  x.rs
ui_macro/src/: configlist.rs  lib.rs  utils.rs  walk.rs
