[package]
name = "faucet_dx"
version = "0.1.0"
authors = ["nash <fj0rd@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
tracing-wasm = "0.2.1"
dioxus-logger = "0.5.1"
dioxus = { version = "0.6.0", features = ["macro", "web"] }
futures = "0.3.31"
gloo-net = "0.6.0"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
comrak = "0.38.0"
serde_json_path = "0.7.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
