[workspace]
resolver = "3"
members = [
  "crates/agent",
  "crates/chat",
  "crates/brick",
  "crates/brick_macro",
  "crates/content",
  "crates/gateway",
  "crates/kafka",
  "crates/message",
  "crates/ui",
  "crates/ui_macro"
]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

