[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.15.0"
short-uuid = "0.2.0"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
kafka = { path = "../kafka" }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-chrono-0_4"] }
proc = { path = "../proc" }
message = { path = "../message" }
content = { path = "../content" }
layout = { path = "../layout" }
url = "2.5.7"
indoc = "2.0.6"
async-fs = "2.2.0"
serde_yaml = "0.9.34"
maplit = "1.0.2"

[[bin]]
name = "chat"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
