[package]
name = "component"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0", optional = true }
itertools = "0.14.0"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = "1.0.228"
serde_json = "1.0.145"
schemars = { version = "1.0.4", optional = true, features = ["chrono04"] }
regex = { version = "1", optional = true }

[features]
dioxus = ["dep:dioxus"]
schema = ["dep:schemars"]
classify = ["dep:regex"]
merge = []
render = []

[[example]]
name = "componentschema"
required-features = ["schema"]
