[package]
name = "kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.37", features = ["cmake-build"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
tokio = "1.45.1"
tracing = "0.1.41"
message = { path = "../message" }
