[package]
name = "kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
tokio = "1.48.0"
tracing = "0.1.41"
message = { path = "../message" }
chrono = { version = "0.4.42", features = ["serde"] }
