[package]
name = "layout"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-rc.3", optional = true }
itertools = "0.14.0"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = "1.0.228"
serde_json = "1.0.145"
schemars = { version = "1.0.4", optional = true, features = ["chrono04"] }

[features]
dioxus = ["dep:dioxus"]
schema = ["dep:schemars"]

[[example]]
name = "jsonschema"
required-features = ["schema"]
