[package]
name = "proc"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
colored = "3.0.0"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
serde = "1.0.219"
serde_json = "1.0.140"
syn = { version = "2.0.104", features = ["extra-traits", "full"] }
