[package]
name = "ui"
version = "0.1.0"
authors = ["nash <fj0rd@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
tracing-wasm = "0.2.1"
dioxus-logger = "0.5.1"
dioxus = { version = "0.6.0", features = ["macro", "web"] }
futures = "0.3.31"
gloo-net = "0.6.0"
js-sys = "0.3.77"
serde_json = "1.0.140"
itertools = "0.14.0"
minijinja = { version = "2.10.2", features = ["loader"] }
markdown = "1.0.0"
web-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
layout = { path = "../layout"}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
