[package]
name = "ui"
version = "0.1.0"
authors = ["nash <fj0rd@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
tracing-wasm = "0.2.1"
dioxus = { version = "0.7.1", features = ["macro", "web"] }
futures = "0.3.31"
gloo-net = "0.6.0"
js-sys = "0.3.82"
serde_json = "1.0.145"
itertools = "0.14.0"
minijinja = { version = "2.12.0", features = ["loader"] }
markdown = "1.0.0"
web-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
component = { path = "../component", features = ["dioxus", "classify", "merge", "render"] }
content = { path = "../content" }
ui_macro = { path = "../ui_macro" }
maplit = "1.0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
