[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
futures = { version = "0.3.31" }
rdkafka = { version = "0.38", features = ["cmake-build"] }
libc = "0.2.177"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.0"
tokio = { version = "1.48.0", features = ['full'] }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
notify = "8.2.0"
reqwest = { version = "0.12.24", features = ["json"] }
minijinja = { version = "2.12.0", features = ["loader"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0.17"
async-fs = "2.2.0"
short-uuid = "0.2.0"
tower-http = { version = "0.6.6", features = ["fs"] }
listenfd = "1.0.2"
message = { path = "../message" }
kafka = { path = "../kafka" }
bon = "3.8.1"
indexmap = { version = "2.12.0", features = ["serde"] }
